# Tokenflow

./: .gitignore  DESIGN.md  README.md  SPEC.md  TODOS.md
.claude/: settings.local.json
.context/retros/: 2026-04-21-1.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/migrations/: V10__retention_pause_daily_aggregate.sql  V11__notification_event_prefs.sql  V12__notification_events.sql  V6__tokenflow.sql  V7__waste_coach_replay.sql  V9__llm_model.sql
backend/tests/: conftest.py  test_coach_error_paths.py  test_coach_retry.py  test_health.py  test_hook_and_tailer.py  test_import_ccprophet.py  test_logging_config.py  test_middleware_request_id.py  test_phase_d_routes.py  test_phase_e_backend.py  test_pubsub.py  test_rate_limit.py  test_routes.py  test_spa_fallback.py
backend/tokenflow/adapters/coach/: client.py
backend/tokenflow/adapters/hook/: event_tailer.py  installer.py  receiver.py
backend/tokenflow/adapters/persistence/: _analytics.py  _base.py  _coach_replay.py  _sessions.py  _wastes.py  import_ccprophet.py  migrations.py  paths.py  repository.py  secret_store.py
backend/tokenflow/adapters/transcript/: parser.py  tailer.py
backend/tokenflow/adapters/web/: app.py  blocking.py  deps.py  mock.py  pubsub.py  rate_limit.py
backend/tokenflow/adapters/web/middleware/: request_id.py
backend/tokenflow/adapters/web/routes/: __init__.py  analytics.py  coach.py  events.py  imports.py  kpi.py  onboarding.py  projects.py  replay.py  rules_and_notifs.py  sessions.py  settings.py  system.py  wastes.py
backend/tokenflow/domain/: better_prompt.py  waste.py
backend/tokenflow/harness/: hook_main.py  main.py
backend/tokenflow/lib/: logging.py
backend/tokenflow/use_cases/: detect_waste.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: spec-core.spec.ts
frontend/e2e-real/: actual-data.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx  Badge.css  Badge.test.tsx  Badge.tsx  Button.css  Button.test.tsx  Button.tsx  Card.css  Card.tsx  EmptyState.css  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorState.css  ErrorState.test.tsx  ErrorState.tsx  KPI.css  KPI.test.tsx  KPI.tsx  LivePill.css  LivePill.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  TickerSSEBridge.test.tsx  TickerSSEBridge.tsx  Topbar.css  Topbar.tsx  TweaksPanel.css  TweaksPanel.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: errorMapping.ts  fmt.test.ts  fmt.ts  (+6 more)
(+47 files in other folders)
